--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -29,6 +29,13 @@
                 <a ng-click="setLanguage('en')">English</a>
             </li>
         </ul>
+        <p class="navbar-text pull-right" style="margin-right: 5em" ng-show="user.name">
+            <a ng-click="logout()">Logout</a>
+        </p>
+
+        <p class="navbar-text pull-right" style="margin-right: 5em" ng-show="user.name">
+            Welcome {{user.name}}
+        </p>
     </div>
 </div>
 
@@ -41,24 +48,28 @@
     <div class="modal" style="display: none" id="login">
         <div class="modal-header">
             <a class="close" data-dismiss="modal">x</a>
+
             <h3>Login</h3>
         </div>
         <div class="modal-body">
+            <label>See applicationContext.xml for valid username/password.</label>
             <div class="control-group">
                 <label class="control-label" for="username">Username</label>
+
                 <div class="controls">
                     <input id="username" ng-model="username"/>
                 </div>
             </div>
             <div class="control-group">
                 <label class="control-label" for="password">Password</label>
+
                 <div class="controls">
                     <input type="password" id="password" ng-model="password"/>
                 </div>
             </div>
         </div>
         <div class="modal-footer">
-            <a hide-modal="$emit('event:loginRequest',username,password)" class="btn btn-primary">Login</a>
+            <a ng-click="login()" class="btn btn-primary">Login</a>
             <a data-dismiss="modal" class="btn">Cancel</a>
         </div>
     </div>
