--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0;url=/main.html#/person"/>
+    <meta http-equiv="refresh" content="0;url=main.html#/person"/>
 </head>
 
 <body>
